--- a/meson.build
+++ b/meson.build
@@ -7,6 +7,8 @@ project(
     ],
 )
 
+# This code was copied from the meson.build file of the Pygame project, I do not own this code.
+
 itz_pm = 'itz_particle_manager' # This is the name of the module
 
 if host_machine.system() == 'windows'
@@ -121,6 +123,43 @@ summary(
         'SDL2' : sdl_dep.found(),
     },
     section : 'Dependencies',
+)
+
+simd_avx2 = false
+simd_avx2_flags = []
+if host_machine.cpu_family().startswith('x86')
+    flag = (cc.get_argument_syntax() == 'msvc') ? '/arch:AVX2' : '-mavx2'
+    if cc.has_argument(flag)
+        simd_avx2_flags += flag
+        simd_avx2 = true
+    endif
+endif
+
+simd_sse2_neon = false
+simd_sse2_neon_flags = []
+if host_machine.cpu_family() == 'arm'
+    # first check if compiler supports the flag, and use it then. Needed only
+    # on 32-bit armv7.
+    flag = '-mfpu=neon'
+    if cc.has_argument(flag) and host_machine.cpu() == 'armv7l'
+        simd_sse2_neon_flags += [flag, '-march=armv7-a']
+        simd_sse2_neon = true
+    endif
+elif host_machine.cpu_family() == 'aarch64'
+    # no explicit flag needed in this case
+    simd_sse2_neon = true
+endif
+
+if simd_sse2_neon
+    add_global_arguments('-DPG_ENABLE_ARM_NEON=1', language: 'c')
+endif
+
+summary(
+    {
+        'AVX2': simd_avx2,
+        'NEON': simd_sse2_neon,
+    },
+    section: 'SIMD',
 )
 
 py.extension_module(
