tentative meson fix

--- a/meson.build
+++ b/meson.build
@@ -7,6 +7,9 @@ project(
     ],
 )
 
+# install pkg-config
+pkgconfig = import('pkgconfig')
+
 # This code was copied from the meson.build file of the Pygame project, I do not own this code.
 
 itz_pm = 'itz_particle_manager' # This is the name of the module
@@ -43,7 +46,7 @@ cc = meson.get_compiler('c')
 fs = import('fs')
 
 py = import('python').find_installation(pure : false)
-py_dep = py.dependency()
+py_dep = py.dependency(required : true)
 
 if not cc.has_header('Python.h', dependencies : py_dep)
     error(
