separated particle manager

--- a/meson.build
+++ b/meson.build
@@ -174,6 +174,7 @@ src_files = [
     'src/simd_particles_avx2.c',
     'src/simd_particles_sse2.c',
     'src/f_vec.c',
+    'src/particle_manager.c',
 ]
 
 py.extension_module(
