Can now pass a single float or two floats (min-max) for values. Better readme. Added unittests.

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -26,3 +26,5 @@ jobs:
           python -m pip install wheel
           python -m pip install pygame-ce
           python -m pip install .
+      - name: Run Tests
+        run: python -m unittest
